<resources>
    <string name="app_name">BL UI</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="_1306_n_maple_street">1306 N. Maple Street</string>
    <string name="alzheimers">Alzheimers</string>
    <string name="_812_987_2973">812 987 2973</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="may_8_1997">May 8, 1997</string>
    <string name="bloomington_in_47404">Bloomington, IN 47404</string>
    <string name="jordan_farris">Jordan Farris</string>
    <string name="phone">phone</string>
    <string name="text">text</string>
    <string name="contact">Contact</string>
    <string name="start_resume_day">Start/Resume Day</string>
    <string name="today">Today</string>
    <string name="schedule">Schedule</string>
    <string name="log_out">Log Out</string>
    <string name="logo">logo</string>
    <string name="call_dwayne_cole">Call Dwayne Cole</string>
    <string name="call_3">Call 3</string>
    <string name="call_office">Call Office</string>
    <string name="home">Home</string>
    <string name="previous">previous</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="_2_30pm">2:30pm</string>
    <string name="_1306_n_maple_street_bloomington_in">1306 N Maple Street Bloomington, IN</string>
    <string name="client">client</string>
    <string name="date">Date</string>
    <string name="monthly">Monthly</string>
    <string name="march_29_2018">March 29, 2018</string>
    <string name="map">Map</string>
    <string name="call">Call</string>
    <string name="date_of_birth_month_0_0000">Date of Birth: Month 0, 0000</string>
    <string name="first_last">First Last</string>
    <string name="mental_condition_condition">Mental Condition: Condition</string>
    <string name="physical_condition_condition">Physical Condition: Condition</string>
    <string name="city_state_12345">City, State 12345</string>
    <string name="_1234_street">1234 Street</string>
    <string name="city_state">City, State</string>
    <string name="_00_00_pm">00:00 pm</string>
    <string name="loading">LOADING...</string>
</resources>
